# TyranoScenarioBuilder

./: .env.sample  .gitignore  Cargo.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/: dependabot.yml  issue_template.md  pull_request_template.md
.github/workflows/: style.yml
migrations/: 20250101105025_create_debug_msg.down.sql  20250101105025_create_debug_msg.up.sql  20250111164758_create_user.down.sql  20250111164758_create_user.up.sql  20250111165610_create_project.down.sql  20250111165610_create_project.up.sql  20250111174929_create_constant_value.down.sql  20250111174929_create_constant_value.up.sql  20250111181324_create_tag.down.sql  20250111181324_create_tag.up.sql  20250111182116_create_input.down.sql  20250111182116_create_input.up.sql  20250111182638_create_scenario.down.sql  20250111182638_create_scenario.up.sql  20250201163241_change_tag.down.sql  20250201163241_change_tag.up.sql  20250201165032_add_project_access_date.down.sql  20250201165032_add_project_access_date.up.sql
src/: main.rs  teras.rs
src/views/: blockly.rs  login.rs  mod.rs  project.rs
static/css/: main.css
static/js/: blockly_init.js  blockly_init.js.map  script.js  sidebar.js  sidebar.js.map
templates/: base.html  base.html.tera  head.html.tera  header.html.tera  sidebar.html.tera
templates/blockly/: test.html.tera
templates/scenario/: edit.html.tera  project.html.tera
templates/user/: login.html.tera
ts/: blockly_init.ts  sidebar.ts
