[package]
name = "tyrano-scenario-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
crap = "0.1.0"
derive_builder = "0.20.2"
dotenvy = "0.15.7"
itertools = "0.13.0"
maplit = "1.0.2"
regex = "1.11.1"
rocket = { version = "0.5.1", features = ["json"]}
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0.215", features  = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "sqlite"] }
tera = "1.20.0"
thiserror = "2.0.6"
tokio = "1.42.0"
uuid = "1.11.0"